--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Simple web app",
   "main": "app.js",
+  "engines": { "node": "12.16.1", "npm": "6.14.4" }, 
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/app.js",
