--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
     "nodemon": "^2.0.20",
-    "serve-static": "^1.15.0"
+    "serve-static": "^1.15.0",
+    "babel-cli":"^6.26.0",
+    "babel-present-env":"^1.7.0"
   },
   "devDependencies": {
     "express-http-proxy": "^1.6.3"
