--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Simple web app",
   "main": "app.js",
-  "engines": { "node": "12.16.1", "npm": "6.14.4" }, 
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.14.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/app.js",
@@ -22,8 +25,8 @@
     "mongoose": "^6.7.1",
     "nodemon": "^2.0.20",
     "serve-static": "^1.15.0",
-    "babel-cli":"^6.26.0",
-    "babel-preset-env":"^1.7.0"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
   },
   "devDependencies": {
     "express-http-proxy": "^1.6.3"
